# haskell-gettext

./: .gitignore  LICENSE  NEWS  README.md  haskell-gettext.cabal  hgettext.hs  run-tests.sh  stack.yaml
Data/: Gettext.hs  Gmo.hs
Data/Gettext/: GmoFile.hs  Parsers.hs  Plural.hs
examples/: gmodump.hs  gmotest.hs
examples/po/: ru.po
exe/: Main.hs  Options.hs
lib/Data/: Gettext.hs
lib/Data/Gettext/: GmoFile.hs  Parsers.hs  Plural.hs
test/shelltest/I18N/: Menu.hs  unicode.test
test/shelltest/exceptions/: empty.test
test/shelltest/options/: Menu.hs  options.test
test/shelltest/translate/: Menu.hs  generate.test
