name:                haskell-gettext
version:             0.1.0.0
synopsis:            GNU Gettext mo/gmo files format support in pure Haskell
description:         This package provides loader for GNU Gettext .mo (.gmo) files, and API to use
                     them from within Haskell.
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Gmo
  build-depends:       base > 4 && < 5,
                       binary >=0.7,
                       bytestring >=0.10,
                       text >= 1.2,
                       bytestring-trie >=0.2,
                       containers >=0.5,
                       time >=1.4,
                       transformers >=0.3
