cabal-version:       2.2
name:                haskell-gettext
version:             0.1.2.0
synopsis:            GetText runtime library implementation in pure Haskell
description:         This package is pure Haskell implementation of GetText library runtime.
                     It allows you to:
                     .
                     * Load GNU Gettext binary catalog files (`.mo`, `.gmo`).
                     .
                     * Execute lookups for messages in catalog (gettext and ngettext functions).
                     .
                     Support for plural form selection expressions is fully implemented.
                     .
                     This package is however relatively low-level and may be not very nice to
                     use in applications. So it can be used as a backend for some more user-friendly
                     \"translation framework\".
                     .
                     This package has the following advantages comparing to hgettext:
                     .
                     * It is easier to build it on different platforms, since it has no dependency on
                       C code;
                     .
                     * It does not depend on additional C libraries in runtime;
                     .
                     * And probably the most important: this library does not use global process-level
                       variables to store "current catalog" (current locale), the catalog should be
                       specified for each call of translation function. So it can be much simpler to
                       use this library for example in web applications.

license:             BSD-3-Clause
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
copyright:           © 2017–2019 Ilya Portnov
category:            Text
build-type:          Simple
extra-doc-files:     README.md, NEWS
extra-source-files:  examples/gmodump.hs
                     examples/gmotest.hs

common shared
  build-depends:    base == 4.*,
                    text >= 2.1.2 && < 2.2,
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:              shared
  exposed-modules:     Data.Gettext
                       Data.Gettext.GmoFile
                       Data.Gettext.Parsers
                       Data.Gettext.Plural
  build-depends:       binary >=0.7 && < 0.9,
                       bytestring >=0.10 && < 0.13,
                       containers >=0.5 && < 0.7,
                       mtl >= 2.2.1 && < 2.4,
                       parsec >= 3.1.11 && < 3.2,
                       time >=1.4 && < 1.13,
                       transformers >=0.3 && < 0.7
  hs-source-dirs:      lib/

executable hgettext
  import:            shared
  main-is:           Main.hs
  other-modules:     Options
  build-depends:     filepath >= 1.4 && < 1.6,
                     haskell-src-exts >= 1.18 && < 1.24,
                     old-locale >= 1.0 && < 1.1,
                     optparse-applicative >= 0.18.1 && < 0.19,
                     time >= 1.5.0 && < 1.13,
                     uniplate >= 1.6.12 && < 1.7,
  hs-source-dirs:    exe/

source-repository head
  type: git
  location: https://github.com/portnov/haskell-gettext.git
